--- a/module-01/declarations.html
+++ b/module-01/declarations.html
@@ -115,7 +115,7 @@ with an object or function.</p>
 <p>An “External Declaration” appears outside of any enclosure, and is synonmous
 with “file-scope”. It does not mean the same thing as “External Linkage”, which
 we mentioned earlier. Externally declared identifiers may have internal or
-external linkage depending on whether the <code class="code highlight c docutils literal highlight-c"><span class="k">static</span></code> keyword is used in the
+external linkage depending on whether the <span class="c-texpr sig sig-inline highlight c">static</span> keyword is used in the
 declaration.</p>
 </div>
 </section>
@@ -142,17 +142,17 @@ its storage class. Here is the list of all of these keywords:</p>
 <ul class="simple">
 <li><p>Type Qualifiers</p>
 <ul>
-<li><p><code class="code highlight c docutils literal highlight-c"><span class="k">const</span></code></p></li>
-<li><p><code class="code highlight c docutils literal highlight-c"><span class="k">volatile</span></code></p></li>
-<li><p><code class="code highlight c docutils literal highlight-c"><span class="kr">restrict</span></code> (can only be used to qualify pointers)</p></li>
+<li><p><span class="c-texpr sig sig-inline highlight c">const</span></p></li>
+<li><p><span class="c-texpr sig sig-inline highlight c">volatile</span></p></li>
+<li><p><span class="c-texpr sig sig-inline highlight c">restrict</span> (can only be used to qualify pointers)</p></li>
 </ul>
 </li>
 <li><p>Storage Class Specifiers</p>
 <ul>
-<li><p><code class="code highlight c docutils literal highlight-c"><span class="k">static</span></code></p></li>
-<li><p><code class="code highlight c docutils literal highlight-c"><span class="k">extern</span></code></p></li>
-<li><p><code class="code highlight c docutils literal highlight-c"><span class="k">register</span></code></p></li>
-<li><p><code class="code highlight c docutils literal highlight-c"><span class="k">typedef</span></code></p></li>
+<li><p><span class="c-texpr sig sig-inline highlight c">static</span></p></li>
+<li><p><span class="c-texpr sig sig-inline highlight c">extern</span></p></li>
+<li><p><span class="c-texpr sig sig-inline highlight c">register</span></p></li>
+<li><p><span class="c-texpr sig sig-inline highlight c">typedef</span></p></li>
 </ul>
 </li>
 <li><p>Function Specifier:</p>
